fix input border-radius on iOS

--- a/src/scss/components/input.scss
+++ b/src/scss/components/input.scss
@@ -4,6 +4,7 @@
   margin-left: -2px;
   margin-right: -2px;
   border: 0;
+  border-radius: 0;
   border-bottom: 2px solid #eee;
 
   outline: none;
